[package]
name = "imot"
version = "0.1.0"
authors = ["Andrii Pavlenko <andriipawlenko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[dependencies]
structopt = "0.3"
anyhow = "1.0"
image = "0.23"